variables.Variables.scala.error
Compilation error:
Variables:4: error: value += is not a member of Int
  stepDone += 1 ;
           ^Variables:9: error: value -= is not a member of Int
  stepDone -= 1;
           ^