variables.Variables.scala.code
val stepDone:Int = 0
while(!isOverBaggle()){
  forward();
  stepDone += 1 ;
}
pickupBaggle()
while(stepDone > 0){
  backward();
  stepDone -= 1;
}
